# public3/swagger.json
@@ -27,6 +27,20 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"ResponseGeneric": {
+				"properties": {
+					"payload": {},
+					"code": {
+						"type": "number",
+						"format": "double"
+					},
+					"message": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -108,8 +122,15 @@
 			"put": {
 				"operationId": "GetFacturas",
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ResponseGeneric"
+								}
+							}
+						}
 					}
 				},
 				"security": [],
